// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField Component FormField renders amount field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked AmountField props: 
        {"dataIndex":"amount","fieldType":"amount","label":"amount","name":"amount","inputValue":50,"errorMessage":"ERROR"}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked AmountField props: 
        {"dataIndex":"amount","fieldType":"amount","label":"amount","inputValue":"0","readOnly":true,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders amount field 2`] = `
<div>
  <div>
    Mocked AmountField props: 
    {"dataIndex":"amount","fieldType":"amount","label":"amount","name":"amount"}
  </div>
</div>
`;

exports[`FormField Component FormField renders checkbox field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked CheckboxField props: 
        {"dataIndex":"checkbox","fieldType":"checkbox","label":"checkbox","inputValue":[{"value":"value1","label":"label1"},{"value":"value2","label":"label2","checked":true},{"value":"value3","label":"label3","checked":false}],"errorMessage":"ERROR"}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked CheckboxField props: 
        {"dataIndex":"checkbox","fieldType":"checkbox","label":"checkbox","inputValue":[{"value":"value1","label":"label1","checked":true,"highlighted":true},{"value":"value2","label":"label2","checked":false,"highlighted":true},{"value":"value3","label":"label3","highlighted":true},{"value":"value4","label":"label4"}],"readOnly":true,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders checkbox field 2`] = `
<div>
  <div>
    Mocked CheckboxField props: 
    {"dataIndex":"checkbox","fieldType":"checkbox","label":"checkbox"}
  </div>
</div>
`;

exports[`FormField Component FormField renders custom field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked CustomField props: 
        {"dataIndex":"custom","fieldType":"custom","label":"custom","value":1}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked CustomField props: 
        {"dataIndex":"custom","fieldType":"custom","label":"custom","value":1,"readOnly":true,"inputValue":0,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders custom field 2`] = `
<div>
  <div>
    Mocked CustomField props: 
    {"dataIndex":"custom","fieldType":"custom","label":"custom"}
  </div>
</div>
`;

exports[`FormField Component FormField renders date field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked DatePickerField props: 
        {"dataIndex":"date","fieldType":"date","label":"date","name":"date","inputValue":"2022-04-12T00:00:00.000Z","errorMessage":"ERROR","usePortal":true}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked DatePickerField props: 
        {"dataIndex":"date","fieldType":"date","label":"date","inputValue":"1984-09-24T00:00:00.000Z","usePortal":true,"readOnly":true,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders date field 2`] = `
<div>
  <div>
    Mocked DatePickerField props: 
    {"dataIndex":"date","fieldType":"date","label":"date","name":"date","usePortal":true}
  </div>
</div>
`;

exports[`FormField Component FormField renders dynamic search field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked DynamicSearchField props: 
        {"dataIndex":"dynamicsearch","fieldType":"dynamicsearch","label":"dynamicsearch","name":"dynamicsearch","inputValue":"value1","errorMessage":"ERROR"}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked DynamicSearchField props: 
        {"dataIndex":"dynamicsearch","fieldType":"dynamicsearch","label":"dynamicsearch","inputValue":"value2","readOnly":true,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders dynamic search field 2`] = `
<div>
  <div>
    Mocked DynamicSearchField props: 
    {"dataIndex":"dynamicsearch","fieldType":"dynamicsearch","label":"dynamicsearch","name":"dynamicsearch"}
  </div>
</div>
`;

exports[`FormField Component FormField renders file field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked FileField props: 
        {"dataIndex":"file","fieldType":"file","label":"file","requestMethod":"POST","requestUrl":"test.url","name":"file","inputValue":[{"name":"file1","size":1,"type":"type1","status":"done"}],"errorMessage":"ERROR"}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked FileField props: 
        {"dataIndex":"file","fieldType":"file","label":"file","requestMethod":"POST","requestUrl":"test.url","inputValue":[{"name":"file2","size":2,"type":"type2","status":"done"}],"readOnly":true,"highlighted":false}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders file field 2`] = `
<div>
  <div>
    Mocked FileField props: 
    {"dataIndex":"file","fieldType":"file","label":"file","requestMethod":"POST","requestUrl":"test.url","name":"file"}
  </div>
</div>
`;

exports[`FormField Component FormField renders multi select field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked MultiSelectField props: 
        {"dataIndex":"multiselect","fieldType":"multiselect","label":"multiselect","numberOfItemLabel":"{} item selected","numberOfItemsLabel":"{} items selected","options":[{"value":"value1","label":"label1"},{"value":"value2","label":"label2"}],"name":"multiselect","inputValue":["value1"],"errorMessage":"ERROR"}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked MultiSelectField props: 
        {"dataIndex":"multiselect","fieldType":"multiselect","label":"multiselect","numberOfItemLabel":"{} item selected","numberOfItemsLabel":"{} items selected","options":[{"value":"value1","label":"label1"},{"value":"value2","label":"label2"}],"inputValue":["value2"],"readOnly":true,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders multi select field 2`] = `
<div>
  <div>
    Mocked MultiSelectField props: 
    {"dataIndex":"multiselect","fieldType":"multiselect","label":"multiselect","numberOfItemLabel":"{} item selected","numberOfItemsLabel":"{} items selected","options":[{"value":"value1","label":"label1"},{"value":"value2","label":"label2"}],"name":"multiselect"}
  </div>
</div>
`;

exports[`FormField Component FormField renders multi select field 3`] = `
<div>
  <div>
    Mocked MultiSelectField props: 
    {"dataIndex":"multiselect","eraseValueWhenNotInOptions":true,"fieldType":"multiselect","label":"multiselect","numberOfItemLabel":"{} item selected","numberOfItemsLabel":"{} items selected","options":[{"value":"value1","label":"label1"},{"value":"value2","label":"label2"}],"name":"multiselect","inputValue":["value-invalid"]}
  </div>
</div>
`;

exports[`FormField Component FormField renders number field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked AmountField props: 
        {"dataIndex":"number","fieldType":"number","label":"number","name":"number","inputValue":50,"errorMessage":"ERROR"}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked AmountField props: 
        {"dataIndex":"number","fieldType":"number","label":"number","inputValue":"0","readOnly":true,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders number field 2`] = `
<div>
  <div>
    Mocked AmountField props: 
    {"dataIndex":"number","fieldType":"number","label":"number","name":"number"}
  </div>
</div>
`;

exports[`FormField Component FormField renders percentage field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked PercentageField props: 
        {"dataIndex":"percentage","fieldType":"percentage","label":"percentage","name":"percentage","inputValue":50,"errorMessage":"ERROR"}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked PercentageField props: 
        {"dataIndex":"percentage","fieldType":"percentage","label":"percentage","inputValue":"0","readOnly":true,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders percentage field 2`] = `
<div>
  <div>
    Mocked PercentageField props: 
    {"dataIndex":"percentage","fieldType":"percentage","label":"percentage","name":"percentage"}
  </div>
</div>
`;

exports[`FormField Component FormField renders rich text field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked RichTextField props: 
        {"dataIndex":"richtext","fieldType":"richtext","label":"richtext","name":"richtext","inputValue":"richtext","errorMessage":"ERROR"}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked RichTextField props: 
        {"dataIndex":"richtext","fieldType":"richtext","label":"richtext","inputValue":"old richtext","readOnly":true,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders rich text field 2`] = `
<div>
  <div>
    Mocked RichTextField props: 
    {"dataIndex":"richtext","fieldType":"richtext","label":"richtext","name":"richtext"}
  </div>
</div>
`;

exports[`FormField Component FormField renders select field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked SelectField props: 
        {"dataIndex":"select","fieldType":"select","label":"select","options":[{"value":"value1","label":"label1"},{"value":"value2","label":"label2"}],"name":"select","inputValue":"value1","errorMessage":"ERROR"}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked SelectField props: 
        {"dataIndex":"select","fieldType":"select","label":"select","options":[{"value":"value1","label":"label1"},{"value":"value2","label":"label2"}],"inputValue":"value1","readOnly":true,"highlighted":false}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders select field 2`] = `
<div>
  <div>
    Mocked SelectField props: 
    {"dataIndex":"select","fieldType":"select","label":"select","options":[{"value":"value1","label":"label1"},{"value":"value2","label":"label2"}],"name":"select"}
  </div>
</div>
`;

exports[`FormField Component FormField renders select field 3`] = `
<div>
  <div>
    Mocked SelectField props: 
    {"dataIndex":"select","eraseValueWhenNotInOptions":true,"fieldType":"select","label":"select","options":[{"value":"value1","label":"label1"},{"value":"value2","label":"label2"}],"name":"select","inputValue":"value-invalid"}
  </div>
</div>
`;

exports[`FormField Component FormField renders switch field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked SwitchField props: 
        {"dataIndex":"switch","fieldType":"switch","label":"switch","inputValue":[{"value":"value1","label":"label1"},{"value":"value2","label":"label2","checked":true},{"value":"value3","label":"label3","checked":false}],"errorMessage":"ERROR"}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked SwitchField props: 
        {"dataIndex":"switch","fieldType":"switch","label":"switch","inputValue":[{"value":"value1","label":"label1","checked":true,"highlighted":true},{"value":"value2","label":"label2","checked":false,"highlighted":true},{"value":"value3","label":"label3","highlighted":true},{"value":"value4","label":"label4"}],"readOnly":true,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders switch field 2`] = `
<div>
  <div>
    Mocked SwitchField props: 
    {"dataIndex":"switch","fieldType":"switch","label":"switch"}
  </div>
</div>
`;

exports[`FormField Component FormField renders table field 1`] = `
<div>
  <div>
    Mocked SwitchField props: 
    {"columns":[{"title":"number","dataIndex":"number","type":"number"}],"dataIndex":"table","extra":{"validationSchema":{"deps":[],"tests":[],"transforms":[null],"conditions":[],"_whitelist":{"list":{},"refs":{}},"_blacklist":{"list":{},"refs":{}},"exclusiveTests":{},"spec":{"strip":false,"strict":false,"abortEarly":true,"recursive":true,"nullable":false,"presence":"optional"},"fields":{"number":{"type":"number","_whitelist":{"list":{},"refs":{}},"_blacklist":{"list":{},"refs":{}},"exclusiveTests":{"required":true},"deps":[],"conditions":[],"tests":[null],"transforms":[null],"spec":{"strip":false,"strict":false,"abortEarly":true,"recursive":true,"nullable":false,"presence":"required"}}},"_nodes":["number"],"_excludedEdges":[],"type":"object"}},"fieldType":"table","label":"table","data":[{"number":1},{"number":2},{"number":3}]}
  </div>
</div>
`;

exports[`FormField Component FormField renders text field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked TextField props: 
        {"dataIndex":"text","fieldType":"text","label":"text","name":"text","inputValue":"text","errorMessage":"ERROR"}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked TextField props: 
        {"dataIndex":"text","fieldType":"text","label":"text","inputValue":"old text","readOnly":true,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders text field 2`] = `
<div>
  <div>
    Mocked TextField props: 
    {"dataIndex":"text","fieldType":"text","label":"text","name":"text"}
  </div>
</div>
`;

exports[`FormField Component FormField renders textarea field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked TextAreaField props: 
        {"dataIndex":"textarea","fieldType":"textarea","label":"textearea","name":"textarea","inputValue":"textarea","errorMessage":"ERROR"}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked TextAreaField props: 
        {"dataIndex":"textarea","fieldType":"textarea","label":"textearea","inputValue":"old textarea","readOnly":true,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders textarea field 2`] = `
<div>
  <div>
    Mocked TextAreaField props: 
    {"dataIndex":"textarea","fieldType":"textarea","label":"textarea","name":"textarea"}
  </div>
</div>
`;

exports[`FormField Component FormField renders year field 1`] = `
<div>
  <div
    class="gds-layout-row"
  >
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked YearPickerField props: 
        {"dataIndex":"year","fieldType":"year","label":"year","name":"year","inputValue":2022,"errorMessage":"ERROR","usePortal":true}
      </div>
    </div>
    <div
      class="gds-layout-col"
    >
      <div>
        Mocked YearPickerField props: 
        {"dataIndex":"year","fieldType":"year","label":"year","inputValue":2020,"usePortal":true,"readOnly":true,"highlighted":true}
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField Component FormField renders year field 2`] = `
<div>
  <div>
    Mocked YearPickerField props: 
    {"dataIndex":"year","fieldType":"year","label":"year","name":"year","usePortal":true}
  </div>
</div>
`;
